// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照测试 设置属性 1`] = `
<ul
  className="sc-AxjAm jSMlTn sinoui-list"
>
  <li
    className="sc-AxirZ cJHOzn sinoui-list-item sinoui-list-item--insert sinoui-list-item--disabled sinoui-list-item--disabled-ripple"
    disabled={true}
    tabIndex="0"
  >
    item
  </li>
</ul>
`;

exports[`快照测试 默认 1`] = `
<ul
  className="sc-AxjAm jSMlTn sinoui-list"
>
  <li
    className="sc-AxirZ ctYxQP sinoui-list-item"
    tabIndex="0"
  >
    item
  </li>
</ul>
`;
